# ticket-rag-support-system

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260316_0001_create_tickets_table.py  20260316_0002_add_ticket_embedding_index.py  20260317_0003_add_embedding_metadata_columns.py  20260317_0004_create_support_users_table.py  20260317_0005_create_auth_users_table.py
app/: main.py
app/api/: dependencies.py  search_filters.py
app/api/routers/: auth.py  chat.py  demo.py  health.py  ops.py  tickets.py
app/application/interfaces/: ticket_repository.py  (+5 more)
app/frontend/: index.html
app/schemas/: auth.py  chat.py  error.py  ops.py  search.py  ticket.py
app/scripts/: evaluate_retrieval.py  reindex_embeddings.py  seed_tickets.py  tune_hybrid_weights.py
docker/: entrypoint.sh
evaluation/: retrieval_eval_dataset.json
evaluation/reports/: baseline.json  tuning.json
tests/api/: test_auth.py  test_chat.py  test_chat_guard.py  test_health.py  test_ops.py  test_tickets_reindex.py  test_tickets_ui_contract.py
tests/evaluation/: test_retrieval_metrics.py
tests/integration/: test_postgres_connectivity.py
tests/unit/: test_query_analyzer.py  test_support_assistant_service.py  test_ticket_embedding_service.py  test_ticket_ingestion_service.py  test_ticket_search_service.py  test_user_guard_service.py
ui/: README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/lib/: api.ts  types.ts
(+28 files in other folders)
