[project]
name = "ai-support-ticket-chatbot"
version = "0.1.0"
description = "Backend inicial para chatbot de soporte con base de tickets."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.20",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "pgvector>=0.3.0",
  "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
